Darkened background colour for readability. Corrected & tidied bio

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 $primary : #424242; // Text content
 $secondary : #f5b342; // Accent colour
-$tertiary : #FEFEFA; // Site background
+$tertiary : #fffbee; // Site background
 $quarternary : #1F2232; // Footer background
 
 $subtle : #b3b3b3;
